# just-simple-automation

./: .gitignore  components.py  interface.py  logger.py  main.py  model_data.py  models.py  partslist.py  pyproject.toml  scratch.py
testing/: test_models.py
