[project]
name = "automation software project"
version = "0.1.0"
description = "requirements for automation software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "psutil>=7.2.2",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"
